@@ -23,3 +23,23 @@
 .dropzone {
     margin-top: 10px;
 }
+
+.alert-danger, .alert-success, .alert-info {
+    padding: 20px;
+}
+
+.success {
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+}
+
+.import-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.error-title p {
+    margin-bottom: 10px;
+}
